[FIX] missing margin to align share result button (PIX-2804)

--- a/mon-pix/app/styles/pages/_skill-review.scss
+++ b/mon-pix/app/styles/pages/_skill-review.scss
@@ -358,6 +358,7 @@
   &__button {
     letter-spacing: 0.031rem;
     min-width: 100px;
+    margin: 0 auto;
   }
 
   &__legal {
